--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div class="login-box">
+  <form>
+    <div class="user-box">
+      <input type="email" name="" required="true">
+      <label>Email</label>
+    </div>
+    <div class="user-box">
+      <input type="password" name="" required="true">
+      <label>Mot de passe</label>
+    </div>
+    <div class="button-container">
+      <button type="submit" class="button">Connexion</button>
+    </div>
+  </form>
+</div>
