--- a/src/app/components/security/register/register.component.html
+++ b/src/app/components/security/register/register.component.html
@@ -1,1 +1,33 @@
-<p>register works!</p>
+<div class="register-box">
+    <form (ngSubmit)="submitForm()">
+        <div class="user-box">
+            <input type="text" name="" required>
+            <label>Nom</label>
+        </div>
+        <div class="user-box">
+            <input type="text" name="" required>
+            <label>Prénom</label>
+        </div>
+        <div class="user-box">
+            <input type="text" name="email" required [(ngModel)]="email" (input)="checkEmail(email)">
+            <label>Email</label>
+            <div class="error" *ngIf="formSubmitted && !isEmailValid">L'email n'est pas valide.</div>
+        </div>
+        <div class="user-box">
+            <input type="password" [(ngModel)]="password" name="password" required
+                (input)="verifyPasswordStrength(password)" (input)="verifyPassword(password, email)">
+            <label>Mot de passe</label>
+            <div class="error" *ngIf="formSubmitted && !passwordStrong">Le mot de passe doit comporter au moins 8
+                caractères.</div>
+        </div>
+        <div class="user-box">
+            <input type="password" [(ngModel)]="confirmPassword" name="confirmPassword" required
+                (input)="verifyPassword(password, confirmPassword)">
+            <label>Verification mot de passe</label>
+            <div class="error" *ngIf="formSubmitted && !passwordMatch">Les mots de passe ne correspondent pas.</div>
+        </div>
+        <div class="button-container">
+            <button type="submit" class="button">S'enregistrer</button>
+        </div>
+    </form>
+</div>
