--- a/src/app/pages/security/security-page/security-page.component.scss
+++ b/src/app/pages/security/security-page/security-page.component.scss
@@ -34,8 +34,6 @@
 
 .security-container {
     width: 90vw;
-    height: auto;
-    margin: 20px auto 20px auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,6 +50,7 @@
     border: 1px solid #000;
     background: #6F42C1;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    z-index: 1;
 }
 
 .top-bar-form-item-connection,
@@ -64,24 +63,6 @@
     border-radius: 5px;
     position: relative;
     background: #6F42C1;
-    /* initial color */
-    overflow: hidden;
-    /* transition duration */
-    transition: background-color 1s;
-}
-
-.top-bar-form-item-connection::before,
-.top-bar-form-item-register::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(270deg, #6F42C1, #6041B3, #522DA4, #461A96, #40286D);
-    background-size: 500% 500%;
-    transition: background-color 3s ease;
-    z-index: -1;
 }
 
 .top-bar-form {
@@ -111,17 +92,40 @@
 }
 
 .top-bar-form-item-selected {
-    animation: finalColor 3s ease forwards;
+    animation: finalColor 1s ease forwards;
 }
 
-.top-bar-form-item-selected {
-    animation: wave 3s ease forwards;
+.top-bar-form-item-selected::before {
+    animation: wave 1s ease forwards;
 }
 
-
-.unselected {
+/*.unselected {
     animation: fadeOut 1s forwards;
   }
+
+  .unselected::before {
+    animation: wave 1s ease forwards;
+  }
+
+.top-bar-form-item-connection::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #6F42C1;
+    border-radius: 5px;
+    z-index: -1;
+}
+
+.top-bar-form-item-register::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #6F42C1;
+    border-radius: 5px;
+    z-index: -1;
+}*/
 
 @keyframes wave {
     0% {
@@ -136,24 +140,20 @@
 @keyframes finalColor {
     0% {
         background-color: #6F42C1;
-        /* initial color */
     }
 
     100% {
         background-color: #40286D;
-        /* final color */
     }
 }
 
 @keyframes fadeOut {
     0% {
         background-color: #40286D;
-        /* final color */
     }
 
     100% {
         background-color: #6F42C1;
-        /* initial color */
     }
 }
 
@@ -161,12 +161,24 @@
     border-radius: 5px;
     background: linear-gradient(180deg, #EEE 0%, #DFDFDF 100%);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    height: 200px;
+    height: auto;
     width: 100%;
     top: -10px;
-    padding-top: 15px;
+    padding-top: 40px;
     position: relative;
-    z-index: -111;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.login-form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: auto;
 }
 
 //------------------------- Mobile -------------------------//
