--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; padding: 0;}
+
+
+// Colors
+
+$primary: #6F42C1;
+$secondary: #17A2B8;
+
