--- a/src/app/pages/security/security-page/security-page.component.scss
+++ b/src/app/pages/security/security-page/security-page.component.scss
@@ -99,34 +99,6 @@
     animation: wave 1s ease forwards;
 }
 
-/*.unselected {
-    animation: fadeOut 1s forwards;
-  }
-
-  .unselected::before {
-    animation: wave 1s ease forwards;
-  }
-
-.top-bar-form-item-connection::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #6F42C1;
-    border-radius: 5px;
-    z-index: -1;
-}
-
-.top-bar-form-item-register::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #6F42C1;
-    border-radius: 5px;
-    z-index: -1;
-}*/
-
 @keyframes wave {
     0% {
         background-position: 0% 50%;
@@ -179,6 +151,20 @@
     align-items: center;
     width: 100%;
     height: auto;
+}
+
+.info-submitted-validation-error {
+  color: red;
+  font-size: 16px;
+  margin-bottom: 20px;
+  max-width: 100%;
+}
+
+.info-submitted-validation-valid {
+  color: darkgreen;
+  font-size: 16px;
+  margin-bottom: 20px;
+  max-width: 100%;
 }
 
 //------------------------- Mobile -------------------------//
