fix all conflicts, add auth-interceptor

--- a/src/app/pages/manage-promotions/manage-promotions.component.html
+++ b/src/app/pages/manage-promotions/manage-promotions.component.html
@@ -25,7 +25,7 @@
           {{ topicId }}
         </li>
       </ul>
-
+      <p>Photo</p>
       <div>
         <img class="Coucou" [src]="getMediaUrlFromDescription(promotion.description)" alt="Promotion Image" />
       </div>
