--- a/src/app/pages/promotions/promotions.component.html
+++ b/src/app/pages/promotions/promotions.component.html
@@ -14,12 +14,12 @@
   <div class="modal-container" [ngClass]="{ 'show-modal': showModal }">
     <div class="modal-content">
       <!-- TODO echanger -->
-      <!-- <app-participants-modal *ngIf="showModal" (closeModal)="closeParticipantsModal()">Close</app-participants-modal> -->
-      <app-participants-modal
+      <app-participants-modal *ngIf="showModal" (closeModal)="closeParticipantsModal()">Close</app-participants-modal>
+      <!-- <app-participants-modal
         *ngIf="showModal"
         [createdPromoId]="createdPromoId"
         (closeModal)="closeParticipantsModal()"
-      ></app-participants-modal>
+      ></app-participants-modal> -->
     </div>
   </div>
 
