--- a/src/app/components/participants-modal/participants-modal.component.scss
+++ b/src/app/components/participants-modal/participants-modal.component.scss
@@ -1,6 +1,6 @@
 .modal-container {
   width: 20rem;
-  height: 15rem;
+  min-height: 15rem;
   padding: 20px;
   background-color: #f0f0f0;
   border-radius: 8px;
