--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
     <nav class="menu" [ngClass]="{ open: isMenuOpen }">
       <ul>
         <li><a routerLink="/accueil">Accueil</a></li>
-        <li><a routerLink="/promos">Promos</a></li>
+        <li><a routerLink="/promotions">Promos</a></li>
         <li><a routerLink="/discution">Discution</a></li>
         <li><a routerLink="/commerce">Commerce</a></li>
         <li><a routerLink="/dashboard">Dashboard</a></li>
