Try add user id  the promotion creation path

--- a/src/app/pages/manage-promotions/manage-promotions.component.html
+++ b/src/app/pages/manage-promotions/manage-promotions.component.html
@@ -1,4 +1,9 @@
 <div *ngIf="promotionsData">
+  <p>
+    Actuellement,
+    <span class="number">{{ promotionsData.length }}</span>
+    cours sont disponibles
+  </p>
   <div class="promotion-card-container">
     <div class="promotion-card" *ngFor="let promotion of promotionsData">
       <h3>Name: {{ promotion.name }}</h3>
