--- a/src/app/pages/promotions/promotions.component.html
+++ b/src/app/pages/promotions/promotions.component.html
@@ -24,6 +24,6 @@
   </div>
 
   <div class="Button">
-    <button class="PromoButton" (click)="sendText()">Envoyer</button>
+    <button class="PromoButton" (click)="createPromotion()">Envoyer</button>
   </div>
 </div>
