--- a/src/app/pages/promotions/promotions.component.scss
+++ b/src/app/pages/promotions/promotions.component.scss
@@ -38,22 +38,22 @@
     margin: 2rem;
   }
 }
-.addParticipants {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.selectStudents {
-  li {
-    list-style: none;
-  }
-}
-.studentsList {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  li {
-    list-style: none;
-  }
-}
+// .addParticipants {
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: column;
+// }
+// .selectStudents {
+//   li {
+//     list-style: none;
+//   }
+// }
+// .studentsList {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   flex-direction: column;
+//   li {
+//     list-style: none;
+//   }
+// }
