Dashboard style finished

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,8 @@ span.ql-picker-label {
   color: white;
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 html,
 body {
   height: 100%;
@@ -55,8 +57,3 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   padding: 0;
 }
-
-// Colors
-
-$primary: #6f42c1;
-$secondary: #17a2b8;
