--- a/src/app/pages/promotions/promotions.component.scss
+++ b/src/app/pages/promotions/promotions.component.scss
@@ -1,5 +1,3 @@
-@import '/src/styles.scss';
-
 .promotion {
   margin: 1.5rem 1.5rem;
   display: flex;
@@ -20,7 +18,7 @@
 #editor {
   margin: 1rem auto;
   width: 80%;
-  height: 20rem;
+  min-height: 20rem;
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 10px;
@@ -38,22 +36,3 @@
     margin: 2rem;
   }
 }
-// .addParticipants {
-//   display: flex;
-//   justify-content: center;
-//   flex-direction: column;
-// }
-// .selectStudents {
-//   li {
-//     list-style: none;
-//   }
-// }
-// .studentsList {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   flex-direction: column;
-//   li {
-//     list-style: none;
-//   }
-// }
