--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
       <div class="line"></div>
     </div>
 
-    <nav class="menu" [ngClass]="{ open: isMenuOpen }">
+    <div class="menu" [ngClass]="{ open: isMenuOpen }">
       <ul>
         <li><a routerLink="/accueil">Accueil</a></li>
         <li><a routerLink="/promotions">Promos</a></li>
@@ -16,7 +16,7 @@
         <li><a routerLink="/contact">Contact</a></li>
         <li><a routerLink="/authentication">Connexion / Déco</a></li>
       </ul>
-    </nav>
+    </div>
   </div>
 
   <div class="icons">
