--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 
 <div class="background-image">
-  <img src="assets/images/Fond_Brain.png" />
+  <img src="assets/images/Fond.png" />
   <div class="search-bar">
-    <h1>Brain Wave</h1>
+    <h1>BRAIN WAVE</h1>
     <input type="text" placeholder="Rechercher..." (input)="filterSquares($event)" />
   </div>
 </div>
