--- a/src/app/pages/accueil/accueil.component.scss
+++ b/src/app/pages/accueil/accueil.component.scss
@@ -1,4 +1,6 @@
+/* Styles pour les écrans mobiles */
 .background-image {
+  position: relative;
   background-position: top;
   width: 100%;
   height: auto;
@@ -7,32 +9,41 @@
   align-items: flex-start;
 }
 
+.background-image img {
+  width: 100%;
+  max-height: 100%;
+}
+
 .search-bar {
-  position: absolute; /* Positionne la barre de recherche par rapport au conteneur de l'image */
-  top: 70%; /* Positionne la barre de recherche au centre verticalement */
-  left: 50%; /* Positionne la barre de recherche au centre horizontalement */
-  transform: translate(-50%, -50%); /* Centre la barre de recherche parfaitement */
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
   text-align: center;
   color: white;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 40px;
   margin-bottom: 10px;
+  -webkit-text-stroke: 0.5px #6f42c1;
 }
 
 input[type='text'] {
   width: 300px;
   padding: 10px;
   font-size: 16px;
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0 0 0 2px #6f42c1;
 }
 
 .filter-button {
-  left: 20px;
-  bottom: 20px;
   background-color: #6f42c1;
   color: white;
-  margin: 10px;
+  margin: 20px 0px 0px 20px;
   padding: 10px 20px;
   font-size: 16px;
   border: none;
@@ -48,12 +59,12 @@ input[type='text'] {
   margin-top: 20px;
   height: 80vh;
   width: 80%;
-  margin: 0 auto; /* Centrer horizontalement le conteneur des carrés */
+  margin: 0 auto;
 }
 
 .square {
-  width: 100%;
-  height: 100%;
+  width: 250px;
+  height: 200px;
   background-color: #6f42c1;
   display: flex;
   justify-content: center;
@@ -64,4 +75,52 @@ input[type='text'] {
 .square h2 {
   color: white;
   font-size: 18px;
+}
+
+/* Styles pour les écrans desktop */
+@media (min-width: 768px) {
+  .background-image {
+    height: 120vh;
+  }
+
+  .background-image img {
+    max-height: 100%;
+  }
+
+  .search-bar {
+    top: 60%;
+    width: 80%; /* Ajuste la largeur de la barre de recherche en fonction de l'image */
+    padding: 30px; /* Ajuste la marge intérieure de la barre de recherche en fonction de l'image */
+  }
+
+  h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+
+  input[type='text'] {
+    width: 100%; /* Remplit la largeur de la barre de recherche sur desktop */
+    font-size: 20px;
+  }
+
+  .filter-button {
+    margin-top: 40px;
+  }
+
+  .square-container {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: auto;
+    width: 80%;
+  }
+
+  .square {
+    width: calc(33.33% - 40px);
+    margin: 20px;
+  }
+
+  .square h2 {
+    font-size: 24px;
+  }
 }
