--- a/src/app/pages/manage-promotions/manage-promotions.component.scss
+++ b/src/app/pages/manage-promotions/manage-promotions.component.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   text-transform: capitalize;
+  height: 20rem;
 
   .description {
     width: 80%;
@@ -13,6 +14,7 @@
   }
   .description-text {
     width: 90%;
+    height: 5rem;
     word-wrap: break-word;
     text-transform: capitalize;
   }
@@ -20,41 +22,66 @@
     flex: 0 0 calc(33.3333% - 0.5rem);
     border: 1px solid #ddd;
     border-radius: 5px;
-    padding: 15px;
     margin-bottom: 0.5rem;
     width: 10rem;
+    border-radius: 5px;
+    border: 0.3px solid #000;
+    background: #6f42c1;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
   li {
     list-style: decimal;
   }
   .promotion-card p {
-    margin: 5px 0;
+    color: #fff;
+    text-align: center;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    margin: 0.5rem;
   }
   .truncated-text {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 200px;
-    text-transform: capitalize;
+    color: #fff;
+    text-align: center;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
   }
   .image-container {
+    border-radius: 5px;
+    border: 0.3px solid #000;
+    background: lightgray 50% / cover no-repeat;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .promotion-card img {
     width: 100%;
+    border-radius: 5px;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-  }
-  .promotion-card img {
-    max-width: 100%;
-    border-radius: 5px;
-    margin-top: 10px;
   }
 }
 .number {
   color: var(--turquoise);
 }
 .manageButton {
+}
+.buttonTag {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  p {
+    margin: 0.5rem;
+  }
+}
+.arrow {
+  img {
+    width: 20px;
+    height: 20px;
+    align-items: center;
+    vertical-align: middle;
+  }
 }
 button {
   padding: 8px 15px;
@@ -64,9 +91,14 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
-button:hover {
-  background-color: var(--turquoise);
+  .arrow {
+    img {
+      width: 20px;
+      height: 20px;
+      align-items: center;
+      vertical-align: middle;
+    }
+  }
 }
 .loader-container {
   display: flex;
@@ -74,10 +106,8 @@ button:hover {
   justify-content: center;
   height: 100vh;
 }
-
 .loader {
   border: 4px solid rgba(0, 0, 0, 0.3);
-  border-top: 4px solid #3498db;
   border-radius: 50%;
   width: 50px;
   height: 50px;
