--- a/src/app/pages/update-promotion/update-promotion.component.scss
+++ b/src/app/pages/update-promotion/update-promotion.component.scss
@@ -1,7 +1,15 @@
 body {
   font-family: Arial, sans-serif;
 }
-
+.image-container {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  img {
+    height: 10rem;
+    width: 12rem;
+  }
+}
 .promotion-details {
   max-width: 600px;
   margin: 0 auto;
