--- a/src/app/components/dashboard/promotions/user-promotions/user-promotions.component.html
+++ b/src/app/components/dashboard/promotions/user-promotions/user-promotions.component.html
@@ -1,39 +1,39 @@
 <div class="promotions-participated-container">
-    <div class="header-promotions">
-        <div class="title">
-            <p>Mes Promos</p>
-        </div>
-        <div class="button-join-promotion">
-            <p class="button-text">Rejoindre une promotion</p>
-        </div>
+  <div class="header-promotions">
+    <div class="title">
+      <p>Mes Promos</p>
     </div>
-    <div class="all-promotions">
-        <div class="promo-card">
-            <div class="header-card">
-                <img src="https://99designs-blog.imgix.net/blog/wp-content/uploads/2016/03/web-images.jpg?auto=format&q=60&w=1600&h=824&fit=crop&crop=faces" />
-            </div>
-            <div class="body-card">
-                <p>Title</p>
-                <div class="promotion-detail-button">
-                    <p>Details</p>
-                    <img src="../../../../../assets/images/right-arrow.svg" alt="arrow" />
-                </div>
-            </div>
-        </div>
-        <div class="promo-card">
-            <div class="header-card">
-                <img src="https://99designs-blog.imgix.net/blog/wp-content/uploads/2016/03/web-images.jpg?auto=format&q=60&w=1600&h=824&fit=crop&crop=faces" />
-            </div>
-            <div class="body-card">
-                <p>Title</p>
-                <div class="promotion-detail-button">
-                    <p>Details</p>
-                    <img src="../../../../../assets/images/right-arrow.svg" alt="arrow" />
-                </div>
-            </div>
-        </div>
+    <div class="button-join-promotion">
+      <p class="button-text">Rejoindre une promotion</p>
     </div>
-    <div class="show-more">
-        <p class="text-show-more">Voir plus...</p>
+  </div>
+  <div class="all-promotions" *ngIf="promotions.length !== 0">
+    <div *ngFor="let promo of promotions">
+      <div class="promo-card">
+        <div class="header-card">
+          <img
+            src="https://99designs-blog.imgix.net/blog/wp-content/uploads/2016/03/web-images.jpg?auto=format&q=60&w=1600&h=824&fit=crop&crop=faces"
+          />
+        </div>
+        <div class="body-card">
+          <p>{{ promo.name }}</p>
+          <div class="promotion-detail-container">
+            <!-- TODO: add a slug -->
+            <a class="promotion-detail-button">
+              <p>Details</p>
+              <img ngSrc="assets/images/right-arrow.svg" alt="arrow" height="100" width="100" />
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="all-promotions" *ngIf="promotions.length === 0">
+    <div class="no-promotions">
+      <p>Vous n'avez pas encore participé à une promotion</p>
+    </div>
+  </div>
+  <div class="show-more">
+    <p class="text-show-more">Voir plus...</p>
+  </div>
 </div>
