--- a/src/app/components/dashboard/promotions/user-promotions/user-promotions.component.scss
+++ b/src/app/components/dashboard/promotions/user-promotions/user-promotions.component.scss
@@ -94,22 +94,29 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        .promotion-detail-button {
-            width: 100%;
+        .promotion-detail-container {
+          display: flex;
+          justify-content: flex-end;
+          a {
+            text-decoration: none;
+            color: white;
+          }
+          .promotion-detail-button {
+            width: 30%;
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-evenly;
             cursor: pointer;
+            margin-right: 10px;
             p {
-                margin-right: 10px;
-                text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+              text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
             }
             img {
-                width: 20px;
-                height: 20px;
-                margin-right: 10px;
-                align-items: center;
-                vertical-align: middle;
+              width: 20px;
+              height: 20px;
+              align-items: center;
+              vertical-align: middle;
             }
+          }
         }
         p {
             margin: 0;
