--- a/src/app/components/dashboard/user-informations/user-informations.component.html
+++ b/src/app/components/dashboard/user-informations/user-informations.component.html
@@ -1,32 +1,46 @@
 <div class="container">
-    <div class="user-info-container">
-        <div class="image-container">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQv3Hcg4Ax8V6PC6UsY8_ISERwWTE2GaeVmCOr1hMKqA&s" alt="elephant"/>
-        </div>
-        <div class="name-container">
-            <p>Mon nom</p>
-        </div>
-        <div class="stats-container">
-            <div class="stats-background">
-                <div class="stats-text-container">
-                    <p class="count-stat">4</p>
-                    <p class="title-stat">Resources Partagées</p>
-                </div>
-                <div class="stats-text-container">
-                    <p class="count-stat">10</p>
-                    <p class="title-stat">Réponses</p>
-                </div>
-                <div class="stats-text-container">
-                    <p class="count-stat">10</p>
-                    <p class="title-stat">Sujets créés</p>
-                </div>
-            </div>
-        </div>
+  <div class="user-info-container">
+    <div class="image-container">
+      <img [src]="avatarUrl" alt="ad" />
+      <div class="add-avatar">
+        <input class="add-avatar-button" type="file" (change)="onFileSelected($event)" id="file" />
+        <label class="add-avatar-label" for="file"><strong>+</strong></label>
+        <!---<input type="file" (change)="onFileSelected($event)" />
+        <button (click)="onUpload(userData.id)">Upload</button>!--->
+      </div>
     </div>
-    <div class="user-sub-info-container">
-        <div class="bio-container">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci distinctio, doloribus, molestiae, unde in quo expedita dolore excepturi nemo maiores animi exercitationem. Tempore dolorem alias tenetur ipsa quibusdam! Impedit, qui.</p>
-        </div>
+    <div class="name-container">
+      <p>{{ userData.firstname }} {{ userData.lastname }}</p>
     </div>
+    <div class="stats-container">
+      <div class="stats-background">
+        <div class="stats-text-container">
+          <p class="count-stat">4</p>
+          <p class="title-stat">Resources Partagées</p>
+        </div>
+        <div class="stats-text-container">
+          <p class="count-stat">10</p>
+          <p class="title-stat">Réponses</p>
+        </div>
+        <div class="stats-text-container">
+          <p class="count-stat">10</p>
+          <p class="title-stat">Sujets créés</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="user-sub-info-container">
+    <div class="bio-container">
+      <div class="bio-editing-button" (click)="cancelUpdatedDescription()">
+        <img class="edit-button" [src]="isEditingDescription ? closeEditIcon : editIcon" alt="edit" />
+      </div>
+      <p *ngIf="!isEditingDescription">
+        {{ userData.description }}
+      </p>
+      <div class="bio-form" *ngIf="isEditingDescription">
+        <textarea name="bio" id="bio" [(ngModel)]="inputDescription" class="input-text-area-bio"></textarea>
+        <div (click)="onUpdateBio()" class="update-bio-button">Valider</div>
+      </div>
+    </div>
+  </div>
 </div>
-
