--- a/src/app/components/participants-modal/participants-modal.component.scss
+++ b/src/app/components/participants-modal/participants-modal.component.scss
@@ -1,8 +1,9 @@
 .modal-container {
   width: 20rem;
+  color: white;
   min-height: 15rem;
   padding: 20px;
-  background-color: #f0f0f0;
+  background-color: var(--violet);
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: fixed;
@@ -21,7 +22,6 @@
   }
 
   input {
-    width: 100%;
     padding: 8px;
     font-size: 14px;
     border: 1px solid #ccc;
