--- a/src/app/pages/manage-promotions/manage-promotions.component.html
+++ b/src/app/pages/manage-promotions/manage-promotions.component.html
@@ -1,33 +1,89 @@
-<div *ngIf="promotionsData; else loader">
-  <p>
-    Actuellement,
-    <span class="number">{{ promotionsData.length }}</span>
-    cours sont disponibles
-  </p>
+<p>
+  Actuellement,
+  <span class="number">{{ promotionsData.length }}</span>
+  cours sont disponibles
+</p>
 
-  <div class="promotion-card-container">
-    <div class="promotion-card" *ngFor="let promotion of promotionsData">
-      <div class="image-container">
+<div class="promotion-card-container">
+  <div class="promotion-card" *ngFor="let promotion of promotionsData">
+    <div class="promo-card">
+      <div class="header-card">
         <img [src]="getMediaUrlFromDescription(promotion.description)" alt="Promotion Image" />
       </div>
-      <h3 class="truncated-text">{{ promotion.name }}</h3>
-      <a [routerLink]="['/promotion', promotion.id]">
-        <div class="buttonTag">
-          <p>{{ promotion.tag }}</p>
-          <div class="manageButton">
-            <button class="manageButton" (click)="selectPromotionById(promotion.id)">Details</button>
-            <img [src]="'assets/images/right-arrow.svg'" alt="arrow" height="100" width="100" />
+      <div class="body-card">
+        <p>{{ promotion.name }}</p>
+        <div class="promotion-detail-container">
+          <a
+            class="promotion-detail-button"
+            [routerLink]="['/promotion', promotion.id]"
+            (click)="selectPromotionById(promotion.id)"
+          >
+            <p>Details</p>
+            <img [src]="'assets/images/svg/right-arrow.svg'" alt="arrow" height="100" width="100" />
+          </a>
+
+          <ng-template #loader>
+            <div class="loader-container" [@fadeInOut]>
+              <p>Loading...</p>
+            </div>
+          </ng-template>
+          <div *ngIf="!promotionsData">
+            <p>Promotion not found.</p>
           </div>
         </div>
-      </a>
+      </div>
     </div>
   </div>
-</div>
-<ng-template #loader>
+  <!-- </div>
+  </div> -->
+
+  <!-- <div class="promotion-card-container">
+  <div class="promo-card">
+    <div class="header-card">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQv3Hcg4Ax8V6PC6UsY8_ISERwWTE2GaeVmCOr1hMKqA&s"
+        alt="Promotion Image"
+      />
+    </div>
+    <div class="body-card">
+      <p>Promotion</p>
+      <div class="promotion-detail-container">
+        <a class="promotion-detail-button">
+          <p>Details</p>
+          <img [src]="'assets/images/right-arrow.svg'" alt="arrow" height="100" width="100" />
+        </a>
+      </div>
+    </div>
+  </div>
+</div> -->
+  <!-- <div class="promotion-card-container">
+  <div class="promotion-card" *ngFor="let promotion of promotionsData">
+    <div class="promo-card">
+      <div class="header-card">
+        <img [src]="getMediaUrlFromDescription(promotion.description)" alt="Promotion Image" />
+      </div>
+      <div class="body-card">
+        <p>{{ promotion.name }}</p>
+        <div class="promotion-detail-container">
+          <a
+            class="promotion-detail-button"
+            [routerLink]="['/promotion', promotion.id]"
+            (click)="selectPromotionById(promotion.id)"
+          >
+            <p>Details</p>
+            <img [src]="'assets/images/svg/right-arrow.svg'" alt="arrow" height="100" width="100" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+  <!-- <ng-template #loader>
   <div class="loader-container" [@fadeInOut]>
     <p>Loading...</p>
   </div>
 </ng-template>
 <div *ngIf="!promotionsData">
   <p>Promotion not found.</p>
+</div> -->
 </div>
