--- a/src/app/pages/manage-promotions/manage-promotions.component.scss
+++ b/src/app/pages/manage-promotions/manage-promotions.component.scss
@@ -5,120 +5,67 @@
   display: flex;
   justify-content: center;
   text-transform: capitalize;
-  height: 20rem;
 
   .description {
     width: 80%;
     margin: 1rem;
     text-transform: capitalize;
   }
-  .description-text {
-    width: 90%;
-    height: 5rem;
-    word-wrap: break-word;
-    text-transform: capitalize;
-  }
-  .promotion-card {
-    flex: 0 0 calc(33.3333% - 0.5rem);
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    margin-bottom: 0.5rem;
-    width: 10rem;
-    border-radius: 5px;
-    border: 0.3px solid #000;
-    background: #6f42c1;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-  li {
-    list-style: decimal;
-  }
-  .promotion-card p {
-    color: #fff;
-    text-align: center;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 400;
-    margin: 0.5rem;
-  }
-  .truncated-text {
-    color: #fff;
-    text-align: center;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  .image-container {
-    border-radius: 5px;
-    border: 0.3px solid #000;
-    background: lightgray 50% / cover no-repeat;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-
-  .promotion-card img {
-    width: 100%;
-    border-radius: 5px;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-  }
 }
-.number {
-  color: var(--turquoise);
-}
-.manageButton {
-}
-.buttonTag {
-  display: flex;
-  justify-content: space-between;
-  p {
-    margin: 0.5rem;
-  }
-}
-.arrow {
-  img {
-    width: 20px;
-    height: 20px;
-    align-items: center;
-    vertical-align: middle;
-  }
-}
-button {
-  padding: 8px 15px;
-  margin-right: 10px;
-  background-color: var(--violet);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  .arrow {
+.promo-card {
+  margin: 20px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  .header-card {
     img {
-      width: 20px;
-      height: 20px;
-      align-items: center;
-      vertical-align: middle;
+      width: 15rem;
+      height: 7rem;
+      border-radius: 5px;
+      border: 0.3px solid black;
+      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
-}
-.loader-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-.loader {
-  border: 4px solid rgba(0, 0, 0, 0.3);
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
+  .body-card {
+    background-color: (var(--violet));
+    color: white;
+    padding: 10px 0;
+    height: 40%;
+    width: 100%;
+    margin-top: -8px;
+    border-radius: 0 0 5px 5px;
+    border: 0.3px solid black;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .promotion-detail-container {
+      display: flex;
+      justify-content: flex-end;
+      a {
+        text-decoration: none;
+        color: white;
+      }
+      .promotion-detail-button {
+        width: 30%;
+        display: flex;
+        justify-content: space-evenly;
+        cursor: pointer;
+        margin-right: 10px;
+        p {
+          text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+        }
+        img {
+          width: 20px;
+          height: 20px;
+          align-items: center;
+          vertical-align: middle;
+        }
+      }
+    }
+    p {
+      margin: 0;
+      font-size: 16px;
+      font-family: 'Montserrat', sans-serif;
+      text-align: center;
+    }
   }
 }
