--- a/src/app/pages/promotions/promotions.component.scss
+++ b/src/app/pages/promotions/promotions.component.scss
@@ -17,8 +17,8 @@
 }
 #editor {
   margin: 1rem auto;
-  width: 80%;
-  min-height: 20rem;
+  width: 90%;
+  height: 30rem;
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 10px;
