--- a/src/app/pages/update-promotion/update-promotion.component.scss
+++ b/src/app/pages/update-promotion/update-promotion.component.scss
@@ -1,104 +1,119 @@
 body {
   font-family: Arial, sans-serif;
-}
-.image-container {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  img {
-    height: 10rem;
-    width: 12rem;
+  color: white;
+
+  .image-container {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    img {
+      height: 12rem;
+      width: 12rem;
+      border-radius: 50%;
+    }
   }
-}
-.promotion-details {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  width: 90%;
-  word-wrap: break-word;
-  text-transform: capitalize;
-}
+  .promotion-details {
+    background: linear-gradient(180deg, #52338a 0%, #40286d 100%);
 
-h2 {
-  margin-bottom: 10px;
-}
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
 
-h3 {
-  margin-top: 20px;
-}
+    word-wrap: break-word;
+    text-transform: capitalize;
+  }
+  .description-text {
+    display: flex;
+    width: 310px;
+    height: 256px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+  }
 
-h4 {
-  margin: 10px 0;
-}
+  h2 {
+    margin-bottom: 10px;
+  }
 
-p {
-  margin: 5px 0;
-}
+  h3 {
+    margin-top: 20px;
+  }
 
-ul {
-  margin: 10px 0;
-  padding-left: 20px;
-}
+  h4 {
+    margin: 10px 0;
+  }
 
-li {
-  display: flex;
-  align-items: center;
-  margin-bottom: 5px;
-  justify-content: space-around;
-}
+  p {
+    margin: 5px 0;
+  }
 
-li button {
-  margin-left: 10px;
-}
+  ul {
+    margin: 10px 0;
+    padding-left: 20px;
+  }
 
-input[type='text'] {
-  width: 100%;
-  padding: 5px;
-  margin: 10px 0;
-}
+  li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+    justify-content: space-around;
+    color: var(--violet);
+  }
+  .list {
+    color: #ccc;
+  }
+  li button {
+    margin-left: 10px;
+  }
 
-.selected-participants {
-  margin-top: 20px;
-  border-top: 1px solid #ccc;
-  padding-top: 10px;
-}
+  input[type='text'] {
+    width: 100%;
+    padding: 5px;
+    margin: 10px 0;
+  }
 
-.selected-participants ul {
-  margin: 10px 0;
-  padding-left: 20px;
-}
+  .selected-participants {
+    margin-top: 20px;
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
+  }
 
-button {
-  padding: 8px 15px;
-  margin-right: 10px;
-  background-color: var(--violet);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+  .selected-participants ul {
+    margin: 10px 0;
+    padding-left: 20px;
+  }
 
-button:hover {
-  background-color: var(--turquoise);
-}
+  button {
+    padding: 8px 15px;
+    margin-right: 10px;
+    background-color: var(--violet);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
 
-.search-results {
-  list-style: none;
-  background-color: #f9f9f9;
-  padding: 5px;
-  border: 1px solid #ccc;
-}
+  button:hover {
+    background-color: var(--turquoise);
+  }
 
-.search-results li {
-  padding: 5px;
-  cursor: pointer;
-}
+  .search-results {
+    list-style: none;
+    background-color: #f9f9f9;
+    padding: 5px;
+    border: 1px solid #ccc;
+  }
 
-.search-results li:hover {
-  background-color: #e5e5e5;
-}
-.buttonUpdate {
-  display: flex;
-  justify-content: space-around;
+  .search-results li {
+    padding: 5px;
+    cursor: pointer;
+  }
+
+  .search-results li:hover {
+    background-color: #e5e5e5;
+  }
+  .buttonUpdate {
+    display: flex;
+    justify-content: space-around;
+  }
 }
