attempt to incorporate a star rating system

--- a/src/app/pages/manage-promotions/manage-promotions.component.html
+++ b/src/app/pages/manage-promotions/manage-promotions.component.html
@@ -6,6 +6,8 @@
 
 <div class="promotion-card-container">
   <div class="promotion-card" *ngFor="let promotion of promotionsData">
+    <p>note:{{promotion.rating}}</p>
+
     <div class="promo-card">
       <div class="header-card">
         <img [src]="getMediaUrlFromDescription(promotion.description)" alt="Promotion Image" />
